--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "yeoman-generator"
   ],
   "scripts": {
-    "test": "snyk test && eslint . && mocha",
+    "test": "eslint . && mocha",
     "snyk-protect": "snyk protect",
     "prepublish": "npm run snyk-protect",
     "publish": "npm version patch && git push --tags && git push"
@@ -31,11 +31,12 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
+    "falafel": "^1.2.0",
     "lisa-box": "^0.0.4",
     "lisa-plugin": "^0.0.4",
+    "snyk": "^1.18.0",
     "yeoman-generator": "^0.24.1",
-    "yosay": "^1.2.0",
-    "snyk": "^1.18.0"
+    "yosay": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^3.3.1",
