--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chalk": "^1.1.3",
     "falafel": "^1.2.0",
     "lisa-box": "^0.0.4",
+    "detect-conflict": "^1.0.0",
     "lisa-plugin": "^0.0.4",
     "path-exists": "^3.0.0",
     "snyk": "^1.18.0",
