--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "yeoman-generator"
   ],
   "scripts": {
-    "test": "snyk test && eslint . && mocha",
+    "test": "eslint . && mocha",
     "snyk-protect": "snyk protect",
     "prepublish": "npm run snyk-protect",
     "publishPatch": "npm version patch && npm run push",
@@ -34,21 +34,21 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "falafel": "^1.2.0",
-    "lisa-box": "^0.0.4",
-    "detect-conflict": "^1.0.0",
-    "lisa-plugin": "^0.0.4",
+    "falafel": "^2.1.0",
+    "lisa-box": "^0.0.16",
+    "detect-conflict": "^1.0.1",
+    "lisa-plugin": "^0.0.13",
     "path-exists": "^3.0.0",
-    "snyk": "^1.18.0",
-    "yeoman-generator": "^0.24.1",
-    "yosay": "^1.2.0"
+    "snyk": "^1.34.4",
+    "yeoman-generator": "^1.1.1",
+    "yosay": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^3.3.1",
-    "eslint-config-trails": "^1.0.7",
-    "mocha": "^3.0.2",
-    "yeoman-assert": "^2.2.1",
-    "yeoman-test": "^1.4.0"
+    "eslint": "^4.0.0",
+    "eslint-config-trails": "^3.0.0",
+    "mocha": "^3.4.2",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.6.0"
   },
   "eslintConfig": {
     "extends": "trails",
